--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ httptools==0.6.1
 idna==3.7
 marshmallow==3.21.3
 packaging==24.1
+psycopg2==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
 python-dotenv==1.0.1
