--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 annotated-types==0.7.0
 anyio==4.4.0
+certifi==2024.7.4
 click==8.1.7
 environs==11.0.0
 fastapi==0.112.0
 greenlet==3.0.3
 h11==0.14.0
+httpcore==1.0.5
 httptools==0.6.1
+httpx==0.27.0
 idna==3.7
+iniconfig==2.0.0
 marshmallow==3.21.3
 packaging==24.1
+pluggy==1.5.0
 psycopg2==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
+pytest==8.3.2
 python-dotenv==1.0.1
 PyYAML==6.0.1
 sniffio==1.3.1
