HttpUrl for URL validation

--- a/api.yaml
+++ b/api.yaml
@@ -99,6 +99,9 @@ components:
           title: Name
         url:
           type: string
+          maxLength: 2083
+          minLength: 1
+          format: uri
           title: Url
         destination:
           type: string
@@ -120,6 +123,9 @@ components:
           title: Name
         url:
           type: string
+          maxLength: 2083
+          minLength: 1
+          format: uri
           title: Url
         destination:
           type: string
